<resources>
    <string name="app_name">Sofra</string>
    <string name="dismiss">dismiss</string>
    <string name="title_activity_home_cycle">HomeCycleActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_order_splach">ORDER</string>
    <string name="btn_bought_food_splach">BOUGHT FOOD</string>
    <string name="minimum_price_for_oder">minimum price</string>
    <string name="dollar"> $</string>
    <string name="delivery_Cost">Delivery Cost</string>
    <string name="chose_city">chose city</string>
    <string name="we_well_happy_if_you_write_comment">We well happy if you write comment</string>
    <string name="add_comment_or_do_rate">Add comment or do rate</string>
    <string name="status">status</string>
    <string name="total">Total</string>
    <string name="special_order">Special order</string>
    <string name="enter_your_order">Enter your order</string>
    <string name="quantitie">quantitie</string>
    <string name="offer">Offer</string>
    <string name="connect_us">Connect us</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full name</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="enquir">Enquir</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_log_out">Are you sure log out ?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="are_you_forget_your_password">Are you forget your password ?</string>
    <string name="you_don_t_have_account_press_here">You don\'t have account? press here</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New password</string>
    <string name="cofirm_new_password">Confirm new password</string>
    <string name="enter_code">Check your e-mail and enter code</string>
    <string name="menu">Menu</string>
    <string name="comment_recommendtion"><![CDATA[Comment & Recommendtion]]></string>
    <string name="details">Details</string>
    <string name="current">current</string>
    <string name="completed">completed</string>

    <string name="nighbour_name">nighbour</string>
    <string name="price">price</string>
    <string name="charger">Charger</string>
    <string name="add">Add</string>
    <string name="chose_your_rate">Chose your rate</string>
    <string name="pay">Paiement</string>
    <string name="adress_destintion">Adress destintion</string>
    <string name="detail_order">Detail order</string>
    <string name="add_notes">Add notes</string>
    <string name="paiement_when_recieving"> when recieving</string>
    <string name="modify">Modify</string>
    <string name="order_number_is">Order number is</string>
    <string name="recieve">Recieve</string>
    <string name="canceled">Canceled</string>
    <string name="enter_comment">Enter comment</string>
    <string name="information_details">Information details</string>
    <string name="order">Order</string>
    <string name="fraize">Fraize</string>
    <string name="water">Water</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="get_it">get it</string>
    <string name="maby_account_pass_wrong">Maby your account or passwor is wrong</string>
    <string name="minemum_price">Minemum price</string>
    <string name="continoue">Continoue</string>
    <string name="please_upload_image">please upload image</string>
    <string name="city">City</string>
    <string name="name_category">Name category</string>
    <string name="my_cateogries">My Cateogries</string>
    <string name="product_name">Product name</string>
    <string name="description">Description</string>
    <string name="offer_price">Offer price</string>
    <string name="add_image_for_product">Add image for product</string>
    <string name="image_of_product">Image of product</string>
    <string name="period_preparing">period preparing</string>
    <string name="state">State</string>
    <string name="call_information">Call information</string>
    <string name="name">Name</string>
    <string name="spiner_city">spiner city</string>
    <string name="spiner_nighbour">spiner nighbour</string>
    <string name="please_wite">please wite</string>
    <string name="missing_data">Missing data</string>
    <string name="wrong_pass_user">user name or password are wrong</string>
    <string name="new_order">New order</string>
    <string name="approve_delvary">Approved delavry</string>
    <string name="approve">Approve</string>
    <string name="cancel_resoan">Cancel resoan</string>
    <string name="please_enter_here_your_reason">please enter here your reason</string>
    <string name="offer_name">Offer name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="Image_for_show_offer_rest">Image for show</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_confirm_your_new_password">Enter confirm your new password</string>
    <string name="change">change</string>
    <string name="add_new_offer">add new offer</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="comment">Comments</string>
    <string name="change_pass">Change password</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="plus">+</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="chose_cataogry">Chose cataogry</string>
    <string name="there_are_not_item_to_show">there aren\'t item to show</string>
    <string name="there_aren_t_comments">There aren\'t comments</string>
    <string name="txt_commissiom">Please you should transfer 10% from profit in most time is one month although all orders have been signing on your account</string>
    <string name="mans">Mansoura</string>
    <string name="jala">jala</string>
    <string name="there_arent_food">There aren\'t items</string>
    <string name="address">Adress</string>
    <string name="date">Date</string>
    <string name="all_price">All price</string>
    <string name="invalid_password">invalid password</string>
    <string name="invalid_confirm_password">invalid confirm password</string>
    <string name="invalid_email">invalid email</string>
    <string name="failed_required">failed required</string>
    <string name="enter_email">Enter e-mail</string>
</resources>
