<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dim_16">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/connect_us"
                android:textSize="24sp"
                android:textColor="@color/third_color_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_name_connect_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="@dimen/dim_16" />

            <EditText
                android:id="@+id/edt_email_connect_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dim_16" />

            <EditText
                android:id="@+id/edt_phone_connect_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="@dimen/dim_16" />

            <EditText
                android:id="@+id/edt_message_connect_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_200"
                android:layout_marginTop="@dimen/dim_16"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:gravity="top"
                android:hint="Message"
                android:inputType="textMultiLine"
                android:padding="@dimen/dim_16" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dim_16">

                <RadioButton
                    android:id="@+id/rdio_complaint_connect_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/complaint" />

                <RadioButton
                    android:id="@+id/rdio_gess_connect_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/suggestion" />

                <RadioButton
                    android:id="@+id/rdio_query_connect_us"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enquir" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_send_connect_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_16"
                android:layout_marginBottom="@dimen/dim_16"
                android:background="@drawable/btn_splach_background"
                android:paddingStart="@dimen/dim_25"
                android:paddingEnd="@dimen/dim_25"
                android:text="@string/send"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>