<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_price_charger_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_money_black"
            android:drawablePadding="@dimen/dim_8"
            android:ems="10"
            android:hint="@string/charger"
            android:inputType="number"
            android:paddingStart="@dimen/dim_4"
            android:paddingTop="@dimen/dim_12"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/dim_12"
            tools:ignore="Autofill"

            />

        <EditText
            android:id="@+id/edt_period_prepare_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_clock_regular"
            android:drawablePadding="@dimen/dim_8"
            android:ems="10"
            android:hint="@string/period_preparing"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/dim_4"
            android:paddingTop="@dimen/dim_12"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/dim_12"
            tools:ignore="Autofill" />

        <Switch
            android:id="@+id/swtch_state_profilre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:text="@string/state"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_information_call_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:text="@string/call_information" />

        <EditText
            android:id="@+id/edt_phone_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:background="@drawable/edit_text_background"
            android:drawablePadding="@dimen/dim_8"
            android:ems="10"
            android:inputType="phone"
            android:paddingStart="@dimen/dim_4"
            android:paddingTop="@dimen/dim_12"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/dim_12"
            android:text="@string/phone"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/edt_whatss_app_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:background="@drawable/edit_text_background"
            android:drawableStart="@drawable/ic_whatsapp_black"
            android:drawablePadding="@dimen/dim_8"
            android:ems="10"
            android:inputType="number"
            android:paddingStart="@dimen/dim_4"
            android:paddingTop="@dimen/dim_12"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/dim_12"
            android:text="@string/phone"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/btn_modify_proile_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_16"
            android:background="@drawable/btn_splach_background"
            android:paddingStart="@dimen/dim_50"
            android:paddingEnd="@dimen/dim_50"
            android:text="@string/modify"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
