<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackfround"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dim_16"
            android:paddingTop="@dimen/dim_16"
            android:paddingEnd="@dimen/dim_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_100"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_25"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email_reset1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_25"
                android:drawableStart="@drawable/ic_envelope_square_solid"
                android:drawablePadding="@dimen/dim_8"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btn_send_reset1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim_25"
                android:background="@drawable/btn_splach_background"
                android:paddingStart="@dimen/dim_100"
                android:paddingEnd="@dimen/dim_100"
                android:text="@string/send"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>